Fixed spacing in post

--- a/static/css/post.css
+++ b/static/css/post.css
@@ -43,7 +43,7 @@ h1 {
     margin: 0;
     font-size: var(--font-size-0);
     font-weight: 500;
-    padding: 2rem 0 1rem 0;
+    padding: 0 0 1rem 0;
     text-align: center;
 }
 
@@ -75,10 +75,6 @@ a {
 @media (min-width: 800px) {
     #container {
         grid-template-columns: 3.33em 1fr 3.33em;
-    }
-    
-    h1 {
-        padding: 2.555rem 0 1rem 0;
     }
 }
 
@@ -114,7 +110,7 @@ h2 {
     margin: 0;
     font-size: var(--font-size-1);
     font-weight: normal;
-    padding: 3.5rem 0 0.5rem 0;
+    padding: 3rem 0 1rem 0;
     font-family: TitleFont;
 }
 
@@ -287,7 +283,7 @@ ul, ol {
 #metadata {
     color: var(--cite);
     font-size: var(--font-size-2);
-    padding: 1rem 0 2rem 0;
+    padding: 1rem 0 0 0;
     display: flex;
     justify-content: space-between;
     flex-direction: column-reverse;
@@ -360,9 +356,13 @@ b {
 br.blank-line {
     display: block;
     content: "";
-    margin-top: 1.25rem;
+    margin-top: 1rem;
 }
 
 p code {
     text-justify: none;
+}
+
+#headline {
+    margin: 3rem 0 2rem 0;
 }
